# DebriefTool

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: app_icon.rc
docs/: PROTOCOL.md
scripts/: bootstrap.bat  bootstrap.sh  test_sender.py
src/: main.cpp
src/app/: Application.cpp  Application.hpp  Config.cpp  Config.hpp
src/buffer/: SPSCQueue.hpp  TelemetryStore.hpp
src/demo/: DemoMode.cpp  DemoMode.hpp
src/ecs/: Components.hpp  Systems.cpp  Systems.hpp
src/network/: Packet.hpp  PacketParser.cpp  PacketParser.hpp  UdpReceiver.cpp  UdpReceiver.hpp
src/persistence/: BinaryFormat.hpp  CsvImporter.cpp  CsvImporter.hpp  Recorder.cpp  Recorder.hpp
src/playback/: PlaybackController.cpp  PlaybackController.hpp
src/render/: AssetManager.cpp  AssetManager.hpp  TrailRenderer.hpp
src/ui/: AfterActionUI.cpp  AfterActionUI.hpp  DebriefUI.cpp  DebriefUI.hpp
